getUserLocations method refactor
Return list of locationDTOs with location and its weather